//         Then go the changes in the existing behavior. They usually start with "Update".
//     Bugfixes:
//         Bugfixes go there.
//     Internal changes:
//         Changes to the code that do not affect the behavior of the program.

----------------------------------------------------------------------------------------------------------------------
Version: 2.15.0
Date: September 1st 2025
    Features:
        - Add Ctrl+Shift+Click to add the most cost-effective, accessible recipe for an item.
        - Better accessibility analysis for Ultracube.
    Fixes:
        - Fix icon rendering.
        - Hide fluid temperature options when not part of a recipe or not accepted by that recipe.
        - Modify text colors for highlighted rows in dark mode to improve readability.
        - Don't draw table intermediates as <1μ ingredients/products.
        - The file-picker on the Welcome Screen no longer closes by itself right after being opened.
    Internal changes:
        - Enable mod-fixes for the data, data-updates, and data-final-fixes files.
        - Recompile the lua lib for linux (PR 515). The script now uses CFLAGS and LDFLAGS.
----------------------------------------------------------------------------------------------------------------------
Version: 2.14.0
Date: June 15th 2025
    Features:
        - Module templates can be automatically applied to new recipe rows, on a per-template basis.
    Fixes:
        - Personal equipment names are localized again.
        - Quality prompts from dropdowns now also appear in subsequent selection panels.
        - Fix output temperature selection for recipes that didn't specify the output fluid temperature.
----------------------------------------------------------------------------------------------------------------------
Version: 2.13.0
Date: May 14th 2025
    Features:
        - Add support for exporting all building entities to one blueprint.